      site default time zone. The automatically-selected time zone can be
      corrected at admin/settings/date-time.
    * If your site is being upgraded from Drupal 6 and you do not have the
      contributed date or event modules installed, user time zone settings will
      fallback to the system time zone and will have to be reconfigured by each user.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. The previous functionality in the user module for restricting
      certain e-mail addresses and usernames is now available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Using the registry, modules declare their includable files via their .info file,
      allowing Drupal to lazy-load code as needed, resulting in significant performance
      and memory improvements.
- Theme system:
    * Removed the Bluemarine, Chameleon and Pushbutton themes. These themes live
      on as contributed themes (http://drupal.org/project/bluemarine,
      http://drupal.org/project/chameleon and http://drupal.org/project/pushbutton).
    * Added Stark theme to make analyzing Drupal's default HTML and CSS easier.
- File handling:
    * Files are now first class Drupal objects with file_load(), file_save(),
      and file_validate() functions and corresponding hooks.
    * The file_move(), file_copy() and file_delete() functions now operate on
      file objects and invoke file hooks so that modules are notified and can
      respond to changes.
    * For the occasions when only basic file manipulation are needed--such as